Integrate Clerk Authentication and Enhance User Flow Navigation

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
+    "reset-onboarding": "node ./scripts/reset-onboarding.js",
+    "reset-user-flow": "node ./scripts/reset-user-flow.js",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
@@ -15,7 +17,8 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@clerk/clerk-expo": "^2.8.3",
+    "@clerk/clerk-expo": "^2.8.4",
+    "@clerk/types": "^4.47.0",
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/slider": "^4.5.6",
